# okforge-vision-ocr

./: README.md  okforge_vision_ocr.py  pyproject.toml  qwen_page_ocr.py  requirements.txt  translate_pages.py
.github/workflows/: ci.yml  publish.yml
