[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "okforge-vision-ocr"
dynamic = ["version"]
description = "Page-by-page VLM OCR + photo extraction for any OpenAI-compatible vision-language model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "designcomputer"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]
dependencies = [
    "pymupdf>=1.24",
    "pillow>=10",
    "openai>=1.30",
    "python-dotenv>=1.0",
]

[project.urls]
Repository = "https://github.com/okforge/okforge-vision-ocr"
Homepage = "https://github.com/okforge/okforge-vision-ocr"
Issues = "https://github.com/okforge/okforge-vision-ocr/issues"

[project.scripts]
okforge-vision-ocr = "okforge_vision_ocr:main"
okforge-translate-pages = "translate_pages:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
include = ["okforge_vision_ocr.py", "translate_pages.py"]

[project.optional-dependencies]
dev = [
    "ruff==0.9.7",
]
